Using --enable-new-depsgraph causes the lines in freestyle rendering to not be in the correct location #50995

Closed
opened 2017-03-18 19:35:16 +01:00 by Jason schleifer · 7 comments

System Information
OS X - Intel Iris Pro 1536 MB

Blender Version
Broken: (example: 2.78c, 2.78b - with --enable-new-depsgraph used to launch)
Worked: works fine without --enable-new-depsgraph

If you use --enable-new-depgraph when launching blender, the freestyle line renders don't sit in the right position, they are located over to screen right.

Exact steps for others to reproduce the error
Launch blender: blender --enable-new-depsgraph
Turn on freestyle render in the scene properties panel
Render the scene, the lines are not overlapping the cube.

freestyle.jpg

**System Information** OS X - Intel Iris Pro 1536 MB **Blender Version** Broken: (example: 2.78c, 2.78b - with --enable-new-depsgraph used to launch) Worked: works fine without --enable-new-depsgraph If you use --enable-new-depgraph when launching blender, the freestyle line renders don't sit in the right position, they are located over to screen right. **Exact steps for others to reproduce the error** Launch blender: blender --enable-new-depsgraph Turn on freestyle render in the scene properties panel Render the scene, the lines are not overlapping the cube. ![freestyle.jpg](https://archive.blender.org/developer/F513784/freestyle.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JasonSchleifer

Added subscriber: @JasonSchleifer
Author
Member

I tried this on both mac and windows and found it to behave the same.

I tried this on both mac and windows and found it to behave the same.

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2017-03-20 10:13:46 +01:00

Will have a look.

Will have a look.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed in #50995, thanks for the report!

Fixed in #50995, thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50995
No description provided.