Ашч T50995: Wrong freestyle render with new depgraph

The iossue was caused by 0371ef1/